.circleci/tests/golden/default/wiz-broker.golden.yaml
---
# Source: wiz-broker/templates/secrets.yaml
apiVersion: v1
kind: Secret
metadata:
  name: release-test-api-token
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-broker
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
data:
  clientId: "PHJlcXVpcmVkLWNsaWVudC1pZD4="
  clientToken: "PHJlcXVpcmVkLWNsaWVudC10b2tlbj4="
---
# Source: wiz-broker/templates/wiz-broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-test-agent
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-broker
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wiz-broker
      app.kubernetes.io/instance: release-test
  template:
    metadata:
      annotations:
        rollme: "5snxa"
      labels:
        app.kubernetes.io/name: wiz-broker
        app.kubernetes.io/instance: release-test
        app.kubernetes.io/version: "2.5"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: 
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: connector-data
          secret:
            secretName: release-test-connector
            items:
              - key: connectorData
                path: data
      containers:
        - name: wiz-broker
          securityContext:
            null
          image: wiziopublic.azurecr.io/wiz-app/wiz-broker:2.5
          imagePullPolicy: Always
          volumeMounts:
          - name: connector-data
            mountPath: /etc/connectorData
            readOnly: true
          args: [
            /etc/connectorData/data
          ]
          env:
          - name: LOG_LEVEL
            value: info
          - name: WIZ_ENV
            value: 
          - name: WIZ_CLIENT_ID
            valueFrom:
              secretKeyRef:
                name: release-test-api-token
                key: clientId
          - name: WIZ_CLIENT_TOKEN
            valueFrom:
              secretKeyRef:
                name: release-test-api-token
                key: clientToken
          - name: TARGET_IP
            value: 
          - name: TARGET_PORT
            value: "443"
          resources:
            null
---
# Source: wiz-broker/templates/secrets.yaml
apiVersion: v1
kind: Secret
metadata:
  name: release-test-connector
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-broker
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install, pre-upgrade
    "helm.sh/hook-weight": "-1"
type: Opaque
data:
  connectorData: "eyJDb25uZWN0b3JJZCI6Ilx1MDAzY3JlcXVpcmVkLWNvbm5lY3Rvci1pZFx1MDAzZSIsIlRhcmdldElwIjoiXHUwMDNjcmVxdWlyZWQtdGFyZ2V0LWlwXHUwMDNlIiwiVGFyZ2V0UG9ydCI6Ilx1MDAzY3JlcXVpcmVkLXRhcmdldC1wb3J0XHUwMDNlIiwiVHVubmVsRG9tYWluIjoiXHUwMDNjcmVxdWlyZWQtdGFyZ2V0LWRvbWFpblx1MDAzZSIsIlR1bm5lbFNlcnZlckRvbWFpbiI6Ilx1MDAzY3JlcXVpcmVkLXR1bm5lbC1zZXJ2ZXItZG9tYWluXHUwMDNlIiwiVHVubmVsU2VydmVyUG9ydCI6Ilx1MDAzY3JlcXVpcmVkLXR1bm5lbC1zZXJ2ZXItcG9ydFx1MDAzZSIsIlR1bm5lbFRva2VuIjoiXHUwMDNjcmVxdWlyZWQtY29ubmVjdG9yLX [...]
