.circleci/tests/golden/default/wiz-kubernetes-connector.golden.yaml
---
# Source: wiz-kubernetes-connector/charts/wiz-broker/templates/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: wiz-broker
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-broker
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
---
# Source: wiz-kubernetes-connector/templates/service-account-cluster-reader.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: wiz-cluster-reader
  labels:
    app.kubernetes.io/name: wiz-kubernetes-connector
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
rules:
  - apiGroups: ["*"]
    resources: ["*"]
    verbs: ["get", "list", "watch"]
---
# Source: wiz-kubernetes-connector/templates/service-account-cluster-reader.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: wiz-cluster-reader
  labels:
    app.kubernetes.io/name: wiz-kubernetes-connector
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name:  wiz-cluster-reader
subjects:
- kind: ServiceAccount
  name: wiz-cluster-reader
  namespace: "release-helm-namespace"
---
# Source: wiz-kubernetes-connector/charts/wiz-broker/templates/wiz-broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-test-agent
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-broker
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wiz-broker
      app.kubernetes.io/instance: release-test
  template:
    metadata:
      annotations:
        rollme: "SSYqh"
      labels:
        app.kubernetes.io/name: wiz-broker
        app.kubernetes.io/instance: release-test
        app.kubernetes.io/version: "2.5"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: wiz-broker
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: connector-data
          secret:
            secretName: release-test-connector
            items:
              - key: connectorData
                path: data
      containers:
        - name: wiz-broker
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
          image: wiziopublic.azurecr.io/wiz-app/wiz-broker:2.5
          imagePullPolicy: Always
          volumeMounts:
          - name: connector-data
            mountPath: /etc/connectorData
            readOnly: true
          args: [
            /etc/connectorData/data
          ]
          env:
          - name: LOG_LEVEL
            value: info
          - name: WIZ_ENV
            value: 
          - name: WIZ_CLIENT_ID
            valueFrom:
              secretKeyRef:
                name: release-test-api-token
                key: clientId
          - name: WIZ_CLIENT_TOKEN
            valueFrom:
              secretKeyRef:
                name: release-test-api-token
                key: clientToken
          - name: TARGET_IP
            value: kubernetes.default.svc.cluster.local
          - name: TARGET_PORT
            value: "443"
          resources:
            null
---
# Source: wiz-kubernetes-connector/templates/service-account-cluster-reader.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: wiz-cluster-reader
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-kubernetes-connector
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
---
# Source: wiz-kubernetes-connector/templates/service-account-modify-connector.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: wiz-auto-modify-connector
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-kubernetes-connector
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade,pre-delete
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
    "helm.sh/hook-weight": "-1"
---
# Source: wiz-kubernetes-connector/templates/secret-connector.yaml
apiVersion: v1
kind: Secret
metadata:
  name: release-test-connector
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-kubernetes-connector
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install, pre-upgrade
    "helm.sh/hook-weight": "-1"
type: Opaque
data:
  connectorData: "e30="
---
# Source: wiz-kubernetes-connector/templates/secrets-wiz-api-token.yaml
apiVersion: v1
kind: Secret
metadata:
  name: release-test-api-token
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-kubernetes-connector
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install, pre-upgrade
    "helm.sh/hook-weight": "-1"
stringData:
  clientId: "<insert-client-id>"
  clientToken: "<insert-client-token>"
---
# Source: wiz-kubernetes-connector/templates/service-account-cluster-reader.yaml
apiVersion: v1
kind: Secret
metadata:
  name: wiz-cluster-reader-token
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-kubernetes-connector
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
    kubernetes.io/service-account.name: wiz-cluster-reader
type: kubernetes.io/service-account-token
---
# Source: wiz-kubernetes-connector/templates/service-account-modify-connector.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: wiz-auto-modify-connector
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-kubernetes-connector
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade,pre-delete
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
    "helm.sh/hook-weight": "-1"
rules:
  - apiGroups: [""]
    resources: ["secrets"]
    resourceNames: ["release-test-connector"]
    verbs: ["update", "get"]
  - apiGroups: [""]
    resources: ["secrets"]
    resourceNames: [
      "release-test-api-token",
      "wiz-cluster-reader-token",
    ]
    verbs: ["get"]
---
# Source: wiz-kubernetes-connector/templates/service-account-modify-connector.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: wiz-auto-modify-connector
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-kubernetes-connector
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade,pre-delete
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
    "helm.sh/hook-weight": "-1"
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name:  wiz-auto-modify-connector
subjects:
- kind: ServiceAccount
  name: wiz-auto-modify-connector
  namespace: "release-helm-namespace"
---
# Source: wiz-kubernetes-connector/templates/job-create-connector.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: wiz-kubernetes-connector-create-connector
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-kubernetes-connector
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded 
    rollme.wizApiTokenHash: 465be91677156a402d5d5c6cb47fddad732ebdd57e3458a877eb2cc544b9f217
    rollme.proxyHash: 9aa53d69075371b3fa23ebeea2fd2416ea81fb533499d071ca2d576f17c7c886
    rollme.brokerHash: 115ba85431eeaf8db3ff2173aee02d16e67df1555d5e1ef74cfa7ac0d812cab2   

spec:
  ttlSecondsAfterFinished: 60
  manualSelector: true
  selector:
    matchLabels:
      app.kubernetes.io/name: wiz-kubernetes-connector
      app.kubernetes.io/instance: release-test
  backoffLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wiz-kubernetes-connector
        app.kubernetes.io/instance: release-test
        app.kubernetes.io/version: "2.5"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: wiz-auto-modify-connector
      restartPolicy: "Never"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: wiz-connector-creator
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
          image: wiziopublic.azurecr.io/wiz-app/wiz-broker:2.5
          imagePullPolicy: Always
          command:
            - "wiz-broker"
          args:
            
            - create-kubernetes-connector
            - --api-server-endpoint
            - "https://kubernetes.default.svc.cluster.local"
            - --secrets-namespace
            - "release-helm-namespace"
            - --service-account-token-secret-name
            - "wiz-cluster-reader-token"
            - --output-secret-name
            - "release-test-connector"
            - --is-on-prem=true
            - --wait=true
          env:
          - name: LOG_LEVEL
            value: info
          - name: WIZ_CLIENT_ID
            valueFrom:
              secretKeyRef:
                name: release-test-api-token
                key: clientId
                optional: false
          - name: WIZ_CLIENT_TOKEN
            valueFrom:
              secretKeyRef:
                name: release-test-api-token
                key: clientToken
                optional: false
          - name: WIZ_ENV
            value: 
          resources:
            null
---
# Source: wiz-kubernetes-connector/templates/job-delete-connector.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: wiz-kubernetes-connector-delete-connector
  namespace: "release-helm-namespace"
  labels:
    app.kubernetes.io/name: wiz-kubernetes-connector
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "2.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-delete
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
    rollme.proxyHash: 9aa53d69075371b3fa23ebeea2fd2416ea81fb533499d071ca2d576f17c7c886
    rollme.brokerHash: 115ba85431eeaf8db3ff2173aee02d16e67df1555d5e1ef74cfa7ac0d812cab2 

spec:
  ttlSecondsAfterFinished: 60
  manualSelector: true
  selector:
    matchLabels:
      app.kubernetes.io/name: wiz-kubernetes-connector
      app.kubernetes.io/instance: release-test
  backoffLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wiz-kubernetes-connector
        app.kubernetes.io/instance: release-test
        app.kubernetes.io/version: "2.5"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: wiz-auto-modify-connector
      restartPolicy: "Never"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: wiz-connector-delete
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
          image: wiziopublic.azurecr.io/wiz-app/wiz-broker:2.5
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            - >
              wiz-broker delete-kubernetes-connector 
              --input-secrets-namespace 
              "release-helm-namespace" 
              --input-secret-name 
              "release-test-connector" 
              || true
          env:
          - name: LOG_LEVEL
            value: info
          - name: WIZ_CLIENT_ID
            valueFrom:
              secretKeyRef:
                name: release-test-api-token
                key: clientId
                optional: false
          - name: WIZ_CLIENT_TOKEN
            valueFrom:
              secretKeyRef:
                name: release-test-api-token
                key: clientToken
                optional: false
          - name: WIZ_ENV
            value: ""
          resources:
            null
