.circleci/tests/golden/default/wiz-outpost-lite.golden.yaml
---
# Source: wiz-outpost-lite/templates/credentials.secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: outpost-lite-agent-creds
  labels:
    app.kubernetes.io/name: wiz-outpost-lite
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
stringData:
---
# Source: wiz-outpost-lite/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-test-wiz-outpost-lite
  labels:
    app.kubernetes.io/name: wiz-outpost-lite
    app.kubernetes.io/instance: release-test
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wiz-outpost-lite
      app.kubernetes.io/instance: release-test
  template:
    metadata:
      annotations:
        container.apparmor.security.beta.kubernetes.io/wiz-outpost-lite: unconfined
      labels:
        app.kubernetes.io/name: wiz-outpost-lite
        app.kubernetes.io/instance: release-test
    spec:
      restartPolicy: Always
      containers:
        - name: wiz-outpost-lite
          image: "wizio.azurecr.io/outpost-lite-runner:0.1-latest"
          command: [ "/entrypoint"]
          imagePullPolicy: Always
          env:
          - name: NODE_NAME
            valueFrom:
              fieldRef:
                fieldPath: spec.nodeName
          - name: K8S_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: K8S_POD_NAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          - name: OUTPOST
            value: "1"
          - name: WIZ_OUTPOST_ID
            value: "<required-outpost-id>"
          - name: WIZ_CLIENT_ID
            valueFrom:
              secretKeyRef:
                name: outpost-lite-agent-creds
                key: clientId
          - name: WIZ_CLIENT_SECRET
            valueFrom:
              secretKeyRef:
                name: outpost-lite-agent-creds
                key: clientSecret
          - name: http_proxy
            valueFrom:
              secretKeyRef: 
                name: "wiz-http-proxy-configuration"
                key: "httpProxy"
                optional: true
          - name: HTTP_PROXY
            valueFrom:
              secretKeyRef: 
                name: "wiz-http-proxy-configuration"
                key: "httpProxy"
                optional: true
          - name: https_proxy
            valueFrom:
              secretKeyRef: 
                name: "wiz-http-proxy-configuration"
                key: "httpsProxy"
                optional: true
          - name: HTTPS_PROXY
            valueFrom:
              secretKeyRef: 
                name: "wiz-http-proxy-configuration"
                key: "httpsProxy"
                optional: true
          - name: no_proxy
            valueFrom:
              secretKeyRef: 
                name: "wiz-http-proxy-configuration"
                key: "noProxyAddress"
                optional: true
          - name: NO_PROXY
            valueFrom:
              secretKeyRef: 
                name: "wiz-http-proxy-configuration"
                key: "noProxyAddress"
                optional: true
          - name: SSL_CERT_DIR
            value: "/usr/local/share/ca-certificates/:/certificates/"
          args: [
            "--region", "partition-1",
            "--autoUpdate",
          ]
          resources:
            limits:
              memory: 4396M
            requests:
              memory: 1024M
          securityContext:
            capabilities:
              add:
              - SYS_ADMIN
            seLinuxOptions:
              type: spc_t
          volumeMounts:
            - mountPath: /var/wiz
              name: working-dir
            - mountPath: /usr/local/share/ca-certificates/
              name: ca-certificate
              readOnly: true
      volumes:
        - name: working-dir
          emptyDir: {}
        - name: ca-certificate
          secret:
            defaultMode: 420
            secretName: "wiz-http-proxy-configuration"
            items:
              - key: caCertificate
                path: root.crt
            optional: true
